# rtos_vehicule_monitoring

./: .gitignore  .project  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  LICENSE  README.md  WIKI.md  build_to_qnx.sh  defintion.hpp  doc.conf  main.cpp  qnx.nto.toolchain.cmake  qnx.nto.toolchain2.cmake  start_qnx.sh  test.cpp
gui/: .qmake.stash  consumer.h  gui.pro  gui.pro.qtds  gui_metatypes.json  gui_qmltyperegistrations.cpp  inputdata.cpp  inputdata.h  main.cpp  main.qml  periods.cpp  periods.h  qml.qrc  qml_DashboardGaugeStyle_qml.cpp  qml_IconGaugeStyle_qml.cpp  qml_TachometerStyle_qml.cpp  qml_TurnIndicator_qml.cpp  qml_ValueSource_qml.cpp  qml_dashboard_qml.cpp  qml_qmlcache.qrc  qmlcache_loader.cpp  reader.cpp  reader.h  scheduler.h
gui/Dashboard/: CMakeLists.txt  Dashboard.qmlproject  Dashboard.qmlproject.qtds  Dashboard.qmlproject.qtds.053aec1  qmlmodules
gui/Dashboard/content/: App.qml  CoolantTemp.qml  CurrentGear.qml  DIALFORPERIOD.qml  Dashboard.qml  EngineSpeed.qml  FuelGauge.qml  MainGauge.qml  Screen01.ui.qml  SpeedGauge.qml
gui/Dashboard/imports/Dashboard/: CMakeLists.txt  Constants.qml  qmldir
gui/Dashboard/imports/Dashboard/designer/: plugin.metainfo
gui/Dashboard/src/: import_qml_plugins.h
gui/qml/: CurrentGear.qml  IconGaugeStyle.qml  TachometerStyle.qml  dashboard.qml
lib/: CMakeLists.txt
lib/rtos_common/: CMakeLists.txt
lib/rtos_common/include/: rtos_callback.hpp  rtos_common.hpp  rtos_traits.hpp
lib/rtos_common/src/: rtos_common.cpp
lib/rtos_data/: CMakeLists.txt
lib/rtos_data/include/: rtos_buffer.hpp  rtos_data.hpp  rtos_file.hpp  rtos_packet.hpp  rtos_thread_safe.hpp
lib/rtos_data/src/: rtos_data.cpp  rtos_file.cpp
lib/rtos_ipc/: CMakeLists.txt
lib/rtos_ipc/include/: rtos_algorithm.hpp  rtos_ipc.hpp  rtos_pipe.hpp  rtos_scheduler.hpp  rtos_shared_mem.hpp  rtos_task.hpp  rtos_timer.hpp
lib/rtos_parser/: CMakeLists.txt
lib/rtos_parser/include/: rtos_file.hpp  rtos_parser.hpp
lib/rtos_parser/src/: rtos_parser.cpp
src/: .~lock.dataset.csv#  CMakeLists.txt  common.hpp  consumer.cpp  output.cpp  producer.cpp  reader.cpp  scheduling.cpp  scheduling_backup.cpp  test_producer.cpp  writer.cpp
